Fix for image cropper bug on Mac safari and iOS safari browser

--- a/modules/users/client/css/file-upload-and-modal.css
+++ b/modules/users/client/css/file-upload-and-modal.css
@@ -7,12 +7,14 @@
 }
 
 .cropper-example-3 {
-  width: 100%;
+	margin: 0 auto;
+	width:500px;
+}
+.cropper-example-3 > img{
+	width:500px;
 }
 
-.cropper-example-3 > img {
-  max-width: 100%;
-}
+
 
 .custom-modal-backdrop {
   background-color: black;
